3/10/2019 - COmmit made to correct nav text spacing within the grid

--- a/styles.css
+++ b/styles.css
@@ -99,25 +99,28 @@ p {
 	margin-right:0px;
 }
 
+.nav-item {
+	padding-top:1% !important;
+	padding-bottom:1% !important;
+}
+
 .collapse, nav {
 	background-color:#ffffff;
 }
 
 .active{
-	line-height: 35px !important;
-	background-color: #dddbdc !important;
-	border-color: #dddbdc !important;
+	background-color: #dddbdc;
+	border-color: #dddbdc;
 	vertical-align: middle;
-	margin: none;
-	border-radius: 5px !important;
-	border-width: 0px !important;
-	height: 40px;
-	border-style: solid !important;
+	border-radius: 5px;
+	border-width: 0px;
+	border-style: solid;
+	font-weight:bold;
 }
 
 .dropdown-menu {
-		border:none;
-		text-align:center;
+	border:none;
+	text-align:center;
 	}
 
 /*styles for image overlay*/
